# agent-factory

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  security.yml  smoke-test.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-core-runtime-database-state-machine/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-agent-heartbeat-framework/: 02-00-PLAN.md  02-00-SUMMARY.md  02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VALIDATION.md  02-VERIFICATION.md
clusters/demo-date-arithmetic/: .env.example  Dockerfile  docker-compose.yml  launch.sh  requirements.txt
config/: cluster.yaml
config/agents/: researcher.yaml  strategist.yaml  writer.yaml
factory/: boss.py  generator.py  models.py  pipeline.py  runner.py  workers.py
runtime/: __init__.py  boss.py  cli.py  config.py  database.py  heartbeat.py  models.py  notifier.py  schema.sql  state_machine.py  worker.py
tests/: conftest.py  test_boss.py  test_boss_cli.py  test_cli.py  test_config.py  test_database.py  test_demo_artifact.py  test_factory_cli.py  test_factory_e2e.py  test_factory_generator.py  test_factory_pipeline.py  test_heartbeat.py  test_models.py  test_notifier.py  test_security.py  test_state_machine.py  test_worker.py
(+75 files in other folders)
